--- a/src/components/card/Type/style.css
+++ b/src/components/card/Type/style.css
@@ -1,8 +1,86 @@
-#type{
-    border: 1px solid grey;
-    width: 55px;
-    border-radius: 5px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+#type {
+  border: none;
+  width: 60px;
+  border-radius: 5px;
+  padding: 4px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #fff;
+  text-transform: capitalize;
+}
+
+.dark {
+  background-color: #5a5465;
+}
+
+.normal {
+  background-color: #919aa2;
+  color: #000;
+}
+
+.water {
+  background-color: #5090d6;
+  color: #000;
+}
+
+.fire {
+  background-color: #ff9d55;
+}
+
+.dragon {
+  background-color: #0b6dc3;
+}
+
+.electric {
+  background-color: #f4d23c;
+}
+
+.fairy {
+  background-color: #ec8fe6;
+}
+
+.ghost {
+  background-color: #5269ad;
+}
+
+.ice {
+  background-color: #73cec0;
+}
+
+.grass {
+  background-color: #63bc5a;
+}
+
+.bug {
+  background-color: #91c12f;
+  color: #000;
+}
+
+.fighting {
+  background-color: #ce416b;
+}
+
+.steel {
+  background-color: #5a8ea2;
+}
+
+.rock {
+  background-color: #c5b78c;
+}
+
+.psychic {
+  background-color: #fa7179;
+}
+
+.ground {
+  background-color: #d97845;
+}
+
+.poison {
+  background-color: #b567ce;
+}
+
+.flying {
+  background-color: #89aae3;
 }
